# galaxy-fds-sdk-python

./: .gitignore  Pipfile  README.md  TODO  deploy.sh  install_local.sh  pyproject.toml  requirements.txt  setup.py
fds/: __init__.py  fds_cli.py  fds_client_configuration.py  fds_client_example.py  fds_cmd.py  fds_request.py  fdscli_cli.py  galaxy_fds_client.py  galaxy_fds_client_exception.py  test_utils.py  utils.py
fds/auth/: __init__.py  common.py
fds/auth/signature/: __init__.py  signer.py
fds/model/: __init__.py  access_control_policy.py  copy_object_result.py  fds_access_log_config.py  fds_bucket.py  fds_cors.py  fds_lifecycle.py  fds_object.py  fds_object_listing.py  fds_object_metadata.py  fds_object_summary.py  fds_storage_class.py  init_multipart_upload_result.py  list_domain_mappings_result.py  permission.py  put_object_result.py  quota_policy.py  subresource.py  timestamp_anti_stealing_link_config.py  upload_part_result.py  upload_part_result_list.py
test/: client_test.py  signer_test.py  testMultithreading.py  test_common.py  test_fdscli_cli.py
